[project]
name = "ped-med-link"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "editdistance>=0.8.1",
    "fire>=0.7.0",
    "polars>=1.25.2",
    "ranx>=0.3.20",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
]
